fixing tab alignment

--- a/style/about.css
+++ b/style/about.css
@@ -494,7 +494,7 @@ body {
         height: auto;
         margin-top: 8%;
         text-align: center;
-        margin-right: 50%;
+        margin-right: -50%;
         margin-left: 50%;
     }
 }
@@ -547,7 +547,7 @@ body {
         text-align: center;
         font-size: 20px;
         margin-top: 8%;
-        margin-right: -25%;
+        margin-right: -55%;
     }
 }
 @media screen and (min-width: 481px) {
